--- a/templates/status.html
+++ b/templates/status.html
@@ -53,6 +53,7 @@
                 <td></td>
                 <td></td>
                 {% endif %}
+                <td>{{i.instance_live}}</td>
         </tr>
         {% endfor %}
         </table>
