--- a/templates/status.html
+++ b/templates/status.html
@@ -31,9 +31,14 @@
             <thead>
                 <td>Instance name</td>
                 <td>Instance status</td>
+                <td>Instance Live</td>
+                <td>Last Create</td>
+                <td>Last Delete</td>
+                <td>Last Live Time</td>
                 <td>Last Start</td>
                 <td>Last Completion</td>
                 <td>Last Complete Run Time</td>
+                <td>Last Completed</td>
                 <td>Last Day # Preemptions</td>
                 <td>Current Run Elapsed Time</td>
                 <td>Current Run Preempted</td>
@@ -42,9 +47,19 @@
         <tr>
                 <td>{{i.instance_name}}</td>
                 <td>{{i.instance_status}}</td>
+                <td>{{i.instance_live}}</td>
+                <td>{{i.instance_created}}</td>
+                {% if i.instance_status == 'DELETED' %}
+                <td>{{i.instance_deleted}}</td>
+                <td>{{i.instance_lived}}</td>
+                {% else %}
+                <td></td>
+                <td></td>
+                {% endif %}
                 <td>{{i.instance_started}}</td>
                 <td>{{i.instance_completed}}</td>
                 <td>{{i.instance_comp_elapsed}}</td>
+                <td>{{i.instance_was_completed}}</td>
                 <td>{{i.instance_preempted_count}}</td>
                 {% if i.instance_status == 'RUNNING' %}
                 <td>{{i.instance_curr_elapsed}}</td>
@@ -53,7 +68,6 @@
                 <td></td>
                 <td></td>
                 {% endif %}
-                <td>{{i.instance_live}}</td>
         </tr>
         {% endfor %}
         </table>
